React auth checkbox

--- a/src/demo_clients/reactjs/src/App.css
+++ b/src/demo_clients/reactjs/src/App.css
@@ -106,3 +106,8 @@ a:hover, a:focus {
 .dropdown-item:hover {
   background: #4a90e2 !important;
 }
+
+/* RADIO BUTTONS */
+.auth-title {
+  width: 100px;
+}
