Support token commands in JS and flask

--- a/src/demo_clients/flask/templates/index.html
+++ b/src/demo_clients/flask/templates/index.html
@@ -58,14 +58,21 @@
     </p>
     <form action="" method="post" role="form">
       <div class="main">
-        <button type="submit" class="btn btn-success" name="action" value="block_count">block_count</button>
-        <button type="submit" class="btn btn-success" name="action" value="account_info">account_info</button>
-        <button type="submit" class="btn btn-success" name="action" value="account_history">account_history</button>
-        <button type="submit" class="btn btn-success" name="action" value="active_difficulty">active_difficulty</button>
-        <button type="submit" class="btn btn-success" name="action" value="block_info">block_info</button>
-        <button type="submit" class="btn btn-success" name="action" value="pending">pending</button>
-        <button type="submit" class="btn btn-success" name="action" value="representatives_online">representatives_online</button>
-        <button type="submit" class="btn btn-success" name="action" value="price">price</button>
+        <button type="submit" class="btn btn-success" name="action" value="0">block_count</button>
+        <button type="submit" class="btn btn-success" name="action" value="1">account_info</button>
+        <button type="submit" class="btn btn-success" name="action" value="2">account_history</button>
+        <button type="submit" class="btn btn-success" name="action" value="3">active_difficulty</button>
+        <button type="submit" class="btn btn-success" name="action" value="4">block_info</button>
+        <button type="submit" class="btn btn-success" name="action" value="5">pending</button>
+        <button type="submit" class="btn btn-success" name="action" value="6">representatives_online</button>
+        <button type="submit" class="btn btn-success" name="action" value="7">price</button>
+      </div>
+      <div class="main">
+        <button type="submit" class="btn btn-success" name="action" value="8">Buy Tokens</button>
+        <button type="submit" class="btn btn-success" name="action" value="9">Refill Tokens</button>
+        <button type="submit" class="btn btn-success" name="action" value="10">Order Status</button>
+        <button type="submit" class="btn btn-success" name="action" value="11">Token Status</button>
+        <button type="submit" class="btn btn-success" name="action" value="12">Cancel Order</button>
       </div>
       <div class="main">
           <input type="text" class="form-control" id="command" name="action" placeholder="RPC Command" value={{ active_command }}>
